examples/sample-product-chart/chart-test/reports/run-curated-live-20260602-234624-95262/scenario-policy-opa-gatekeeper-required-labels-20260602-235537/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"test-compliant-ingress"},"name":"test-compliant-ingress","namespace":"sample"},"spec":{"ingressClassName":"nginx","rules":[{"host":"test-compliant.local","http":{"paths":[{"backend":{"service":{"name":"sample","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-06-03T03:57:04Z"
    generation: 1
    labels:
      app.kubernetes.io/name: test-compliant-ingress
    name: test-compliant-ingress
    namespace: sample
    resourceVersion: "981"
    uid: 988fc35c-ca56-4b94-9821-a371696a75da
  spec:
    ingressClassName: nginx
    rules:
    - host: test-compliant.local
      http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
